<resources>
    <string name="app_name">Sauna List</string>
    <string name="action_settings">Settings</string>
    <string name="initial_message">Messages will go here.</string>
    <string name="opt1">Display Saunas</string>
    <string name="opt2">Load Sauna List</string>
    <string name="opt3">Add Sauna</string>
    <string name="opt4">Show Sauna Details</string>
    <string name="opt5">Remove a Sauna</string>
    <string name="opt6">Adjust Sauna Price</string>
    <string name="opt7">Saunas by Capacity</string>
    <string name="opt8">Median Price</string>
    <string name="opt9">Save List</string>

    <string name="edit_file">Enter URL of file</string>
    <string name="text_load_heading">Load Sauna\nEnter a URL to load its data\n</string>
    <string name="load_saunas">Load Saunas</string>
    <string name="text_load">Sauna List will be loaded here</string>

    <string name="text_add_heading">Add Sauna\nEnter the appropriate information into each box to create a new sauna listing\n</string>
    <string name="new_make">Enter Make</string>
    <string name="new_product_code">Enter Product Code</string>
    <string name="new_wood">Enter Wood Type</string>
    <string name="new_capacity">Enter Capacity</string>
    <string name="new_heating">Enter Type of Heating</string>
    <string name="new_price">Enter Price</string>
    <string name="new_url">Enter Image URL</string>
    <string name="add_sauna">Add Sauna</string>
    <string name="text_add">Add a new sauna by pressing the button.</string>

    <string name="text_show_heading">Show Sauna\nEnter the appropriate product code to view the matching sauna\n</string>
    <string name="edit_product_code">Enter Product Code</string>
    <string name="show_sauna">Show Sauna</string>
    <string name="text_show">Sauna will be displayed here.</string>

    <string name="text_remove_heading">Remove Sauna\nEnter the appropriate product code to remove an existing sauna\n</string>
    <string name="remove_sauna">Remove Sauna</string>
    <string name="text_remove">Sauna will be displayed here.</string>

    <string name="text_cp_heading">Change Sauna Price\nEnter the appropriate product code and a positive or negative number to change the sauna\'s price\n</string>
    <string name="change_price">Change Price</string>
    <string name="price_change">Enter a value to Change Price</string>
    <string name="text_cp">Here you can change price.</string>

    <string name="text_capacity_heading">Median Sauna Price\nPress the Button to find a list of all matching capacities\n</string>
    <string name="edit_capacity">Enter Capacity</string>
    <string name="search_capacity">Search by Capacity</string>
    <string name="text_capacity">Saunas with matching capacities will appear here.</string>

    <string name="text_median_heading">Median Sauna Price\nPress the Button to find Median value of the list\n</string>
    <string name="median_price">Find Median Price</string>
    <string name="text_median">Here you can get the median price.</string>

    <string name="text_save_heading">Save List\nPress the Button to save the List to a File\n</string>
    <string name="edit_output">Enter Output File Name</string>
    <string name="save_list">Save List</string>
    <string name="text_save">Here you can output the list to a file.</string>

</resources>

