<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddSauna">

    <TextView android:id="@+id/text_add_heading"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:textSize="18dp"
        android:text="@string/text_add_heading"/>

    <Space android:layout_height="10dp"
        android:layout_width="match_parent"/>

    <View android:layout_height="0.5dp"
        android:layout_width="fill_parent"
        android:background="#000000"/>

    <Space android:layout_height="10dp"
        android:layout_width="match_parent"/>

    <EditText
        android:id="@+id/new_make"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/new_make" />

    <EditText
        android:id="@+id/new_product_code"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/new_product_code" />

    <EditText
        android:id="@+id/new_wood"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/new_wood" />

    <EditText
        android:id="@+id/new_capacity"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/new_capacity" />

    <EditText
        android:id="@+id/new_heating"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/new_heating" />

    <EditText
        android:id="@+id/new_price"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/new_price" />

    <EditText
        android:id="@+id/new_url"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/new_url" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:onClick="addSauna"
        android:text="@string/add_sauna" />

    <TextView android:id="@+id/text_add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_add" />

</LinearLayout>