<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoadSaunaList">

    <TextView android:id="@+id/text_add_heading"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:textSize="18dp"
        android:text="@string/text_load_heading"/>

    <Space android:layout_height="10dp"
        android:layout_width="match_parent"/>

    <View android:layout_height="0.5dp"
        android:layout_width="fill_parent"
        android:background="#000000"/>

    <Space android:layout_height="10dp"
        android:layout_width="match_parent"/>

    <EditText
        android:id="@+id/edit_file"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/edit_file" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:onClick="loadSauna"
        android:text="@string/load_saunas" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical"
        android:fillViewport="true">

        <TextView android:id="@+id/text_load"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_load" />

    </ScrollView>

</LinearLayout>

